<resources>
    <string name="app_name">PETTERN_V0.1</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_home">Home</string>
    <string name="title_health">Health</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <string name="view_all">View All Pets</string>
    <string name="add_new">Add New Pet</string>
    <string name="title_activity_pet_update_delete">PetUpdateDeleteActivity</string>
    <string name="petName">Pet Name</string>
    <string name="petChar">Pet Character</string>
    <string name="petBreed">Pet Breed</string>
    <string name="petGender">Pet Gender</string>
    <string name="petAge">Pet Age</string>
    <string name="petWeight">Pet Weight</string>

    <string name="userName">Your Name</string>
    <string name="userGender">Your Gender</string>
    <string name="userAddress">Your Address</string>
    <string name="userJob">Your Job</string>
    <string name="userSpent">Pet Hours</string>
    <string name="userYear">Birth Year</string>
    <string name="userMonth">Birth Month</string>
    <string name="userDay">Birth Day</string>
    <string name="done">DONE</string>


    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
</resources>